fix: harden metrics API — snapshot safety, type safety, and guards
- activeGroupKeys() now returns Set.copyOf (true snapshot) instead of
  wrapping the live ConcurrentHashMap keySet
- Replace int[] from aggregateTotals() with AggregateTotals record for
  compile-time field safety
- Guard activeCount calculations with Math.max(0, ...) to handle
  transient semaphore over-release
- Add Objects.requireNonNull for groupKey in groupStats() for
  consistency with other public methods

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>